--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://media.licdn.com/dms/image/C560BAQEaEblV_yqOjg/company-logo_100_100/0/1632923521522?e=1698278400&v=beta&t=755oDLYc1qo6xnyq95CXWj1cz9Fgj3T5PRUEfpHtbbI">
   <style>/* Code By Webdevtrick ( https://webdevtrick.com ) */
     html,
     body {
